Update to use micronaut 4
Update to use Gradle 8.1.1
Use version catalog
Use core-processor instead of inject
Fix checkstyle
Java 17 codestyle
Move off deprecated method